# SFCS

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/lab1_pubsub/lib/lab1_pubsub/: listener_node  talker_node
install/lab1_pubsub/share/lab1_pubsub/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/lab1_pubsub/share/lab1_pubsub/cmake/: lab1_pubsubConfig.cmake
log/: latest_build
src/lab1_pubsub/: CMakeLists.txt  package.xml  readme.md
src/lab1_pubsub/launch/: lab1_pubsub.launch.py
src/lab1_pubsub/src/: listener.cpp  talker.cpp
src/lab2_robot_control/: CMakeLists.txt  README.md  package.xml
src/lab2_robot_control/src/: robot_control.cpp  robot_control_1.cpp  robot_control_2.cpp
src/lab4_control_selector/: CMakeLists.txt  README.md  package.xml
src/lab4_control_selector/launch/: cntrl_selector.launch.xml
src/lab4_control_selector/src/: control.h  control_selector_node.cpp  dummy.cpp  dummy.h  selector.cpp  voyager.cpp  voyager.h  wallFollower.cpp  wallFollower.h
src/lab5_simple_map/: CMakeLists.txt  package.xml  readme.md
src/lab5_simple_map/include/simple_map/: scan_to_map.h
src/lab5_simple_map/launch/: map.launch.xml
src/lab5_simple_map/src/: scan_to_map.cpp  simple_map.cpp  simple_map.h
src/lab6_navigation/: lab6_navigation.rar
src/lab6_patrol_bot/: CMakeLists.txt  navi.rviz  navi2.rviz  package.xml  readme.md
src/lab6_patrol_bot/config/: mapper_params_online_async.yaml  my_map.data
src/lab6_patrol_bot/launch/: navi.launch  navigation.launch  navigation_amcl.launch  navigation_launch.py  online_async_launch.py  patrol.launch.xml  save_map.launch
src/lab6_patrol_bot/launch/move_base/: move_base.xml
src/lab6_patrol_bot/src/: patrol_bot.cpp
src/laba5/src/simple_map/: CMakeLists.txt
src/laba5/src/simple_map/include/simple_map/: scan_to_map.h
src/laba5/src/simple_map/launch/: map.launch.xml
src/laba5/src/simple_map/src/: scan_to_map.cpp  simple_map.cpp
src/laba5/src/simple_map/test/: scan_to_map_test.cpp
src/line_control/: CMakeLists.txt  README.md  package.xml
src/line_control/launch/: line.launch  line.launch.xml
src/line_control/src/: line_control.cpp  line_control.h  line_control_node.cpp
src/nav2_bt_navigator_edited/: CMakeLists.txt  package.xml
src/nav2_bt_navigator_edited/include/nav2_bt_navigator/: bt_navigator.hpp
src/nav2_bt_navigator_edited/src/: bt_navigator.cpp
